# arcade-ai

./: .pre-commit-config.yaml  .ruff.toml  Makefile  SECURITY.md  pyproject.toml  uv_setup.sh
examples/cookbook/gmail_curator/toolkit/: __init__.py  gmail_tools.py  pyproject.toml
libs/arcade-mcp/: Makefile  README.md  mkdocs.yml  pyproject.toml
libs/arcade-mcp/arcade_mcp/: __init__.py  __main__.py  base.py  config.py  context.py  convert.py  discovery.py  exceptions.py  lifespan.py  mcp.py  server.py  session.py  settings.py  types.py  worker.py
libs/arcade-mcp/arcade_mcp/fastapi/: __init__.py  routes.py
libs/arcade-mcp/arcade_mcp/managers/: __init__.py  base.py  prompt.py  prompt_manager.py  resource.py  resource_manager.py  tool.py  tool_manager.py
libs/arcade-mcp/arcade_mcp/middleware/: __init__.py  base.py  error_handling.py  logging.py
libs/arcade-mcp/arcade_mcp/templates/: .env.j2  __init__.py  pyproject.toml.j2  server.py.j2  tools.py.j2
libs/arcade-mcp/arcade_mcp/transports/: __init__.py  base.py  http_session_manager.py  http_streamable.py  sse.py  stdio.py  stream.py
libs/arcade-mcp/docs/: index.md
libs/arcade-mcp/docs/advanced/: transports.md
libs/arcade-mcp/docs/api/: app.md  cli.md
libs/arcade-mcp/docs/api/server/: errors.md  (+4 more)
libs/arcade-mcp/docs/clients/: claude.md  cursor.md  inspector.md  vscode.md
libs/arcade-mcp/docs/examples/: 00_hello_world.md  00_hello_world.py  01_tools.md  01_tools.py  02_building_apps.md  02_building_apps.py  03_context.md  03_context.py  04_secrets.md  04_secrets.py  05_logging.md  05_logging.py  README.md
(+119 files in other folders)
